# check-for-your-privilege

./: .gitignore  .python-version  CMakeLists.txt  README.md  data_processing_acs.ipynb  requirements.txt
apps/: CMakeLists.txt  main.cpp
model/: CMakeLists.txt
model/include/: CentralAreaModel.h  FirstHillModel.h  Sample.h  SeattleModel.h  model.h
model/src/: model.cpp
observable/: 3ea120aea44569d7@550.js  743260d2bcf09524@495.js  README.md  b1dfcf5fca53a8b2@1457.js  index.html  index.js
tests/: CMakeLists.txt  hellotests.cpp
writeup/: challenge.tex  challenge_refs.bib  header.tex  preamble.tex
